--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"kafkajs": "^2.2.4",
 		"puppeteer": "^20.1.1",
 		"puppeteer-extra": "^3.3.6",
 		"puppeteer-extra-plugin-adblocker": "^2.13.6",
