--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"kafkajs": "^2.2.4",
+		"mongodb": "^5.6.0",
 		"pnpm": "^8.5.0",
 		"puppeteer": "^20.1.1",
 		"puppeteer-extra": "^3.3.6",
