--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
 	"type": "module",
+	"scripts": {
+		"start": "tsc && node dist/main.js",
+		"lint": "eslint . --ext .ts",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
@@ -10,5 +15,14 @@
 		"puppeteer-extra": "^3.3.6",
 		"puppeteer-extra-plugin-adblocker": "^2.13.6",
 		"puppeteer-extra-plugin-stealth": "^2.11.2"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"eslint": "^8.42.0",
+		"eslint-config-standard-with-typescript": "^35.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"typescript": "^5.1.3"
 	}
 }
