--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"axios": "^1.6.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"kafkajs": "^2.2.4",
