--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"express": "^4.18.2",
 		"kafkajs": "^2.2.4",
 		"mongodb": "^5.6.0",
+		"openai": "^4.47.1",
 		"pnpm": "^8.5.0",
 		"puppeteer": "^20.1.1",
 		"puppeteer-extra": "^3.3.6",
@@ -19,6 +20,7 @@
 		"puppeteer-extra-plugin-stealth": "^2.11.2"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.21",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"eslint": "^8.42.0",
 		"eslint-config-standard-with-typescript": "^35.0.0",
